--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".PaintActivity"
+                  android:launchMode="singleTop"
+                  android:configChanges="keyboardHidden|orientation|screenSize"/>
+
     </application>
 
 </manifest>
