--- a/config.gradle
+++ b/config.gradle
@@ -4,19 +4,16 @@ ext.versions = [
         targetSdk    : 28,
         buildTools    : '28.0.3',
 
+        versionCode : 1,
+        versionName : "1.0",
+
         androidPlugin : '3.3.0',
 
         compat        : '1.0.0',
         appcompat     : '1.1.0-alpha01',
-
-        kotlin_version : '1.3.20',
 ]
 
 ext.kotlin_version = '1.3.20'
-
-//ext.paths = [
-//        gradlePlugin: "com.android.tools.build:gradle:$versions.androidPlugin"
-//]
 
 ext.deps = [
         androidx: [
@@ -31,4 +28,14 @@ ext.deps = [
                 dex             : "androidx.multidex:multidex:2.0.0",
                 exifinterface   : "androidx.exifinterface:exifinterface:1.0.0", // 读取exif图片
         ]
+]
+
+ext.support = [
+        appcompat  : "com.android.support:appcompat-v7:28.0.0",
+        constraintLayout: "com.android.support.constraint:constraint-layout:1.1.3",
+]
+
+ext.kotlinPlugin = [
+        runtime : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+        reflect : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
 ]
