--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,5 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation kotlinPlugin.runtime
-    implementation support.appcompat
-    implementation support.constraintLayout
-    implementation project(':baselib')
+    api project(':baselib')
 }
