--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
             android:networkSecurityConfig="@xml/jz_network_security_config"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:theme="@style/fullScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -23,9 +24,11 @@
 
         <activity android:name=".activity.PaintActivity"
                   android:launchMode="singleTop"
+                  android:theme="@style/fullScreenTheme"
                   android:configChanges="keyboardHidden|orientation|screenSize"/>
 
         <activity android:name=".activity.VideoPlayerActivity"
+                  android:theme="@style/fullScreenTheme"
                   android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
